0-Introduction-and-Installation/manifests/pod-busybox-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: secret
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  namespace: secret
spec:
  containers:
  - image: busybox
    name: busy
    command: 
      - sleep
      - "3600"
