0-Introduction-and-Installation/manifests/svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    run: nginx
  ports:
  - port: 80
    name: HTTP
  type: NodePort
