0-Introduction-and-Installation/manifests/svc-web-8080.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    run: nginx
  ports:
  - protocol: "TCP"
    port: 8080
